# ksrobot

./: CMakeLists.txt  README  TODO  ksrobot.kdev4
apps/: CMakeLists.txt  build_fovis_pointcloud.py  build_pcd_file_settings.xml  build_pcd_files.py  test_isam.py  test_octomap.py  test_python.py
apps/component_test/: CMakeLists.txt  main.cpp
apps/kinect_capture/: CMakeLists.txt  main.cpp
apps/kinectsave/: CMakeLists.txt  main.cpp
apps/robocontrol/: CMakeLists.txt  main.cpp
apps/viewer/: CMakeLists.txt  VisualizerApplication.cpp  VisualizerApplication.h  main.cpp
cmake-modules/: FindOpenCV.cmake  FindOpenNI.cmake  FindTBB.cmake
common/: CMakeLists.txt  Defenitions.cpp  Defenitions.h  Engine.cpp  Engine.h  EngineInterface.cpp  EngineInterface.h  ExecCtrlData.cpp  ExecCtrlData.h  Interface.cpp  Interface.h  KinectImage.cpp  KinectImage.h  KinectInterface.cpp  KinectInterface.h  LoopDetector.cpp  LoopDetector.h  LoopDetectorInterface.cpp  LoopDetectorInterface.h  MappingInterface.cpp  MappingInterface.h  MotionPlanner.cpp  MotionPlanner.h  OccupancyMap.cpp  OccupancyMap.h  PCLUtils.cpp  PCLUtils.h  PlannerInterface.cpp  PlannerInterface.h  ProgramOptions.cpp  ProgramOptions.h  RobotInfo.cpp  RobotInfo.h  SLAMInterface.cpp  SLAMInterface.h  SettingsBinder.cpp  SettingsBinder.h  ThreadContainer.cpp  ThreadContainer.h  Timer.cpp  (+5 more)
common/kinect/: KinectDatasetReader.cpp  KinectDatasetReader.h  KinectDeviceReader.cpp  KinectDeviceReader.h  KinectInterface.cpp  KinectInterface.h
common/py/: EngineInterface_py.cpp  ExecCtrlData_py.cpp  Interface_py.cpp  KinectImage_py.cpp  KinectInterface_py.cpp  LoopDetectorInterface_py.cpp  MappingInterface_py.cpp  MotionPlanner_py.cpp  OccupancyMap_py.cpp  ProgramOptions_py.cpp  RobotInfo_py.cpp  SLAMInterface_py.cpp  Timer_py.cpp  VisualOdometryInterface_py.cpp
gui/: CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  ExecutionControl.cpp  ExecutionControl.h  ImageContainer.cpp  ImageContainer.h  KWidgetBase.cpp  KWidgetBase.h  LogContainer.cpp  LogContainer.h  LogicBridge.cpp  LogicBridge.h  MainWindow.cpp  MainWindow.h  PointCloudViewer.cpp  PointCloudViewer.h  RobXControl.cpp  RobXControl.h  RobXControlDialog.cpp  RobXControlDialog.h  StatisticsContainer.cpp  StatisticsContainer.h  Utils.cpp  Utils.h  ui_ExecutionControl.h  ui_RobXControlDialog.h
interfaces/: CMakeLists.txt  FovisInterface.cpp  FovisInterface.h  ICPInterface.cpp  ICPInterface.h  KinectDatasetReader.cpp  KinectDatasetReader.h  KinectDeviceReader.cpp  KinectDeviceReader.h  LoopDetectorAVT.cpp  LoopDetectorAVT.h  MTEngine.cpp  MTEngine.h  OctomapInterface.cpp  OctomapInterface.h  RRTPlanner.cpp  RRTPlanner.h  SerialEngine.cpp  SerialEngine.h  iSAM2Interface.cpp  iSAM2Interface.h
interfaces/py/: FovisInterface_py.cpp  KinectDatasetReader_py.cpp  KinectDeviceReader_py.cpp  MTEngine_py.cpp  OctomapInterface_py.cpp  RRTPlanner_py.cpp  iSAM2Interface_py.cpp
libksrobot/: CMakeLists.txt  interface_boost_optional.h  libksrobot.cpp  libksrobot_common.cpp  libksrobot_eigen.cpp  libksrobot_interfaces.cpp  libksrobot_pcl.cpp
roboctrl/: CMakeLists.txt  RobXControl.cpp  RobXControl.h  RobXControlDialog.cpp  RobXControlDialog.h  SerialPort.cpp  SerialPort.h  ThreadedRoboCtrl.cpp  ThreadedRoboCtrl.h  ui_RobXControlDialog.h
utils/: CMakeLists.txt  Defenitions.h  Engine.cpp  Engine.h  ExecCtrlData.cpp  ExecCtrlData.h  ProgramOptions.cpp  ProgramOptions.h  SettingsBinder.cpp  SettingsBinder.h  ThreadContainer.cpp  ThreadContainer.h  Worker.cpp  Worker.h
utils/kinect/: CMakeLists.txt  KinectDatasetReader.cpp  KinectDatasetReader.h  KinectDeviceReader.cpp  KinectDeviceReader.h  KinectImage.h  KinectInterface.cpp  KinectInterface.h
